// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MySelect オプション custom mappers 表示 1`] = `
<div
  class="form-group form-row"
  role="group"
>
  <label
    class="col-form-label col-sm-3"
    for="sample_field"
  >
     サンプル 
  </label>
  <div
    class="col-sm-9"
  >
    <!---->
    <select
      class="form-control"
      id="sample_field"
    >
      <!---->
      <option
        data-key="0"
        value=""
      >
          
      </option>
      <option
        data-key="1"
        value="2"
      >
         カスタム２ 
      </option>
      <option
        data-key="2"
        value="4"
      >
         カスタム４ 
      </option>
    </select>
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;

exports[`MySelect バリデーションエラー 表示 1`] = `
<div
  class="form-group form-row"
  role="group"
>
  <label
    class="col-form-label col-sm-3"
    for="sample_field"
  >
     サンプル 
  </label>
  <div
    class="col-sm-9"
  >
    <!---->
    <select
      class="form-control is-invalid"
      id="sample_field"
    >
      <!---->
      <option
        data-key="0"
        value=""
      >
          
      </option>
      <option
        data-key="1"
        value="1"
      >
         オプション1 
      </option>
      <option
        data-key="2"
        value="2"
      >
         オプション2 
      </option>
      <option
        data-key="3"
        value="3"
      >
         オプション3 
      </option>
    </select>
    <!---->
    <!---->
    <div
      class="invalid-feedback"
    >
      エラーです
    </div>
    <!---->
  </div>
</div>
`;

exports[`MySelect 通常 表示 1`] = `
<div
  class="form-group form-row"
  role="group"
>
  <label
    class="col-form-label col-sm-3"
    for="sample_field"
  >
     サンプル 
  </label>
  <div
    class="col-sm-9"
  >
    <!---->
    <select
      class="form-control"
      id="sample_field"
    >
      <!---->
      <option
        data-key="0"
        value=""
      >
          
      </option>
      <option
        data-key="1"
        value="1"
      >
         オプション1 
      </option>
      <option
        data-key="2"
        value="2"
      >
         オプション2 
      </option>
      <option
        data-key="3"
        value="3"
      >
         オプション3 
      </option>
    </select>
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;
